Added OSS controller (creating bucket)

--- a/forgeTesting/forgeTesting.csproj
+++ b/forgeTesting/forgeTesting.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\OAuthController.cs" />
+    <Compile Include="Controllers\OSSController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
