Translate the file (model derivative controller)

--- a/forgeTesting/forgeTesting.csproj
+++ b/forgeTesting/forgeTesting.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ModelDerivativeController.cs" />
     <Compile Include="Controllers\OAuthController.cs" />
     <Compile Include="Controllers\OSSController.cs" />
     <Compile Include="Global.asax.cs">
