--- a/forgeTesting/forgeTesting.csproj
+++ b/forgeTesting/forgeTesting.csproj
@@ -86,7 +86,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Controllers\js\ForgeTree.js" />
+    <Content Include="Controllers\js\ForgeViewer.js" />
     <Content Include="Global.asax" />
+    <Content Include="Controllers\css\main.css" />
+    <Content Include="index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
